--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   --lowPriorityColor:#78affa;
   --buttonColor:#d9d9d9; 
   --primaryFontFamily: "Irish Grover";
-  
+
  
 }
 
@@ -46,6 +46,9 @@ header {
 
 }
 
+.flex {
+  display: flex;
+}
 .menu {
   padding-right: 28px;
 }
