--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ section {
 
 .highPriorityText, .mediumPriorityText, .lowPriorityText {
   font-size: 20px;
+  margin: 2px;
 }
 
 .highPriorityText {
