--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
   margin: 0;
   background-color: var(--primaryBackgroudColor);
   font-family: var(--primaryFontFamily);
+  height:100vh;
 }
 
 /* HEADER */
@@ -72,7 +73,9 @@ li {
 /* MAIN */
 
 section {
-  height: 100vh;
+  
+  align-items: first baseline;
+ 
 }
 
 .regTaskToDoForm {
