--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,14 @@ li {
 
 /* MAIN */
 
+main {
+  flex-grow: 1;
+}
+
 section {
   
   align-items: baseline;
-  height: 100%;
+  height: 100vh;
 
  
 }
