--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ section {
 .addTaskToListButton {
   font-family: var(--primaryFontFamily);
   font-size: 24px;
-  width:472px;
+  width:512px;
   height:54px;
   border-radius: 5px;
   border:1px solid var(--primaryTextColor);
@@ -199,22 +199,24 @@ section {
   height: 650px;
   background-color: var(--headerBackgroundColor);
   border: 3px solid var(--primaryTextColor);
-  border-radius: 3px;
+  border-radius: 5px;
   margin:0px;
 
 }
 
 .listHeadingDiv {
   width:100%;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 30px;
   height: fit-content;
   background-color: #add8e6;
+  border: 1px solid black;
   
 }
 
 .listHeadingText {
- padding-left: 10px;
- padding-right:30px;
+ padding-left: 20px;
+ 
 }
 
 .buttonDiv {
