--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,9 @@ section {
 }
 
 .taskPriorityCheck {
-  width: 10px;
+  width: 50px;
   border-radius: 3px;
+  background-color: aqua;
 }
 .priority {
   align-items: center;
