--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,10 @@ li {
 }
 
 /* MAIN */
+.lightMode {
+  background-color: var(--lightModeBackgroundColor);
+}
+
 
 main {
   flex-grow: 1;
@@ -150,6 +154,7 @@ section {
   width:30px;
   height:30px;
   border-radius: 3px;
+  accent-color: lightblue;
 
 
 }
@@ -258,20 +263,6 @@ section {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* FOOTER */
 
 footer {
@@ -280,7 +271,7 @@ footer {
   align-items: center;
   color: white;
   text-align: center;
-  background-color: gray;
+  background-color: var(--headerBackgroundColor);
   height: 81px;
 }
 
@@ -291,11 +282,12 @@ footer {
 
 .myInfoWrapper {
   gap: 38px;
+  align-items: center;
 }
 
 .footerText {
-  color: rgb(220, 220, 220);
-  margin: 0;
+  color:black;
+  margin: 2px;
 }
 
 .footerTextName {
