--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,16 @@
 /* BODY */
 
 body {
-  margin: 0;
-  padding:0;
+
   background-color: var(--primaryBackgroudColor);
   font-family: var(--primaryFontFamily);
-  height:100vh;
+  
+  height:100%;
+  margin:0;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
 }
 
 /* HEADER */
@@ -53,7 +58,7 @@ header {
   color:var(--primaryTextColor);
   padding:10px;
 }
-
+ 
 .flex {
   display: flex;
 }
@@ -87,9 +92,6 @@ main {
   margin: 40px;
 }
 
-section {
-   
-}
 
 .hero {
   flex-direction: row;
