--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ main {
   justify-content: center;
   align-self: flex-start;
   gap:24px;
+  background-color: black;
 
   
 }
@@ -220,10 +221,11 @@ main {
   flex-direction: column;
   width: 831px;
   height: 650px;
-  background-color: var(--headerBackgroundColor);
-  border: 3px solid var(--primaryTextColor);
+  background-color: rgb(50, 50, 50);
+  border: 9px solid var(--primaryTextColor);
   border-radius: 5px;
   margin:0px;
+
 
 }
 
@@ -233,6 +235,8 @@ main {
 }
 
 .listElement {
+  display: flex;
+  justify-content: space-between;
   font-size: 15px;
 }
 
