--- a/styles.css
+++ b/styles.css
@@ -233,6 +233,7 @@ main {
   display: flex;
   flex-direction: column;
   padding-left: 17px;
+  width: 100%;
 }
 
 .listButton {
@@ -243,6 +244,7 @@ main {
 .listElement {
  
   font-size: 15px;
+  min-width: 1ch;
 }
 
 .listHeadingDiv {
