--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ main {
   font-family: var(--primaryFontFamily);
   font-size: 10px;
   text-decoration: none;
-  
+
 }
 
 .listElement {
@@ -268,7 +268,8 @@ main {
   justify-content: flex-start;
   gap: 30px;
   height: fit-content;
-  background-color: #add8e6;
+
+  /* background-color: #add8e6; */
   border: 1px solid black;
   
 }
