--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ main {
   gap: 30px;
   height: fit-content;
 
-  /* background-color: #add8e6; */
+   background-color: #add8e6; 
   border: 1px solid black;
   
 }
