--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ main {
   padding: 0;
   font-size: 15px;
   margin: 0px;
-  justify-items: center;
+  justify-items: left;
 }
 
 .listHeadingDiv {
