--- a/styles.css
+++ b/styles.css
@@ -250,22 +250,28 @@ main {
   display: block;
   animation-name: slideInLeft;
   animation-duration: 1s;
-  animation-timing-function: ease-in;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.removeErrorMsg {
+  animation-name: slideOutLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
   animation-fill-mode: forwards;
 }
 
 @keyframes slideInLeft {
-  0% { transform: translateX(-1000);}
-  60% { transform: translateX(50px);}
+  0% { transform: translateX(-1000px);}
+  60% { transform: translateX(10px);}
   100%{ trasnform: translateX(0); }
 }
 
-
-
-
-
-
-
+@keyframes slideOutLeft {
+  0% { transform: translateX((0));}
+  20% { transform: translateX(10px);}
+  100% { transform: translateX(-1000px);}
+}
 
 /* så over til selve listen og knappene til den */
 
