--- a/styles.css
+++ b/styles.css
@@ -268,7 +268,7 @@ main {
 }
 
 @keyframes slideOutLeft {
-  0% { transform: translateX((0));}
+  0% { transform: translateX(0);}
   20% { transform: translateX(10px);}
   100% { transform: translateX(-1000px);}
 }
