--- a/styles.css
+++ b/styles.css
@@ -256,21 +256,21 @@ main {
 
 .removeErrorMsg {
   animation-name: slideOutLeft;
-  animation-duration: 1s;
+  animation-duration: 1.2s;
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
 }
 
 @keyframes slideInLeft {
-  0% { transform: translateX(-1000px);}
+  0% { transform: translateX(-1300px);}
   60% { transform: translateX(20px);}
-  100%{ trasnform: translateX(0); }
+  100%{ transform: translateX(0); }
 }
 
 @keyframes slideOutLeft {
   0% { transform: translateX(0);}
   20% { transform: translateX(20px);}
-  100% { transform: translateX(-1000px);}
+  100% { transform: translateX(-1300px);}
 }
 
 /* så over til selve listen og knappene til den */
