--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,19 @@ main {
   width: 45px;
 }
 
+.removeListItem {
+  animation: slideOutBottom;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideOutBottom {
+  0% { transform:translateY(0);}
+  100% { transform:translateY(1000px); }
+}
+
+
 
 /* FOOTER */
 
