--- a/styles.css
+++ b/styles.css
@@ -378,8 +378,8 @@ main {
 
 .removeListItem {
   animation: slideOutBottom;
-  animation-duration: 0.6s;
-  animation-timing-function: ease;
+  animation-duration: 0.9s;
+  animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
 }
 
