--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@ main {
   animation: slideInBottom;
   animation-duration: 0.8s;
   animation-timing-function: ease-in-out;
-  animation-fill-mode: backwards;
+  animation-fill-mode: forwards;
 }
 
 @keyframes slideOutBottom {
