--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ main {
   justify-content: center;
   align-self: flex-start;
   gap:24px;
-  background-color: black;
+  background-color: var(--primaryBackgroudColor);
 
   
 }
