--- a/styles.css
+++ b/styles.css
@@ -402,8 +402,29 @@ main {
   align-self: center;
 }
 
+.fadeInListItem {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 
+}
 
+@keyframes fadeIn {
+  0%  { opacity : 0; }
+  100% {opacity: 1;}
+}
+
+.fadeOutReg {
+  animation-name: fadeOut;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+
+}
+
+@keyframes fadeOut {
+  0%  { opacity : 1; }
+  100% {opacity: 0;}
+}
 
 
 
