--- a/styles.css
+++ b/styles.css
@@ -409,6 +409,7 @@ main {
 .fadeInListItem {
   animation-name: fadeIn;
   animation-duration: 1s;
+  animation-delay: 1s;
   animation-fill-mode: forwards;
 
 }
@@ -420,14 +421,15 @@ main {
 
 .fadeOutReg {
   animation-name: fadeOut;
-  animation-duration: 1s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
 
 }
 
 @keyframes fadeOut {
   0%  { opacity : 1; }
-  100% {opacity: 0;}
+  50% { opacity: 0; }
+  100% {opacity: 1;}
 }
 
 
