--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,13 @@ body {
   background-color: var(--primaryBackgroudColor);
   font-family: var(--primaryFontFamily);
   
-  height:100%;
-  margin:0;
+  height:100vh;
+
+  /* margin:0;
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh; 
+  min-height: 100vh;  */
 }
 
 p {
@@ -108,8 +109,8 @@ li {
 
 
 main {
-  flex-grow: 1;
-  margin: 40px;
+  height: 100%;
+  /* margin: 40px; */
 }
 
 
