--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,10 @@ body {
   
   height:100vh;
 
-  /* margin:0;
+  margin:0;
+  top:0;
+  min-height: 100vh;
+  /*
 
   display: flex;
   flex-direction: column;
@@ -109,8 +112,8 @@ li {
 
 
 main {
-  height:max-content;
-  /* margin: 40px; */
+ flex-grow: 1;
+  margin: 40px;
 }
 
 
