--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
 
   background-color: var(--primaryBackgroudColor);
   font-family: var(--primaryFontFamily);
-  
-  height:100vh;
+  /* display:flex;   */
+  height:100%;
 
   margin:0;
   top:0;
@@ -404,6 +404,8 @@ main {
 
 .creditIconDiv 
 {
+  position: fixed;
+  bottom:110px;
   background-color: var(--headerBackgroundColor);
   flex-direction: column;
   padding: 25px;
