--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,13 @@ body {
 
   margin:0;
   top:0;
+  padding:0;
   min-height: 100vh;
-  /*
+
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh;  */
+  min-height: 100vh;  
 }
 
 p {
@@ -413,7 +414,7 @@ main {
   align-self: center;
 }
 
-.fadeInListItem {
+.fadeIn {
   animation-name: fadeIn;
   animation-duration: 1.2s;
   animation-delay: 0s;
@@ -426,7 +427,7 @@ main {
   100% {opacity: 1;}
 }
 
-.fadeOutReg {
+.fadeOut {
   animation-name: fadeOut;
   animation-duration: 2s;
   animation-fill-mode: forwards;
