--- a/styles.css
+++ b/styles.css
@@ -302,10 +302,12 @@ main {
 .toDoList {
   display: flex;
   flex-direction: column;
-  padding-left: 17px;
+  padding: 0;
   width: 100%;
   margin: 0;
   gap: 10px;
+    overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 .listButton {
@@ -322,8 +324,8 @@ main {
  
   display: grid;
   grid-template-columns: 100px 430px 100px 100px;
-  margin: 10px;
-  padding: 0;
+  /* margin: 10px; */
+  padding-left: 18px;
   font-size: 15px;
   margin: 0px;
   justify-items: left;
@@ -342,6 +344,7 @@ main {
   margin-bottom: 10px;
   
 }
+
 
 .listTextDiv {
   gap: 22px;
@@ -429,15 +432,15 @@ main {
 
 .fadeOut {
   animation-name: fadeOut;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-fill-mode: forwards;
 
 }
 
 @keyframes fadeOut {
   0%  { opacity : 1; }
-  50% { opacity: 0; }
-  100% {opacity: 1;}
+  100% { opacity: 0; }
+
 }
 
 
@@ -503,7 +506,8 @@ footer {
 
 .kodeloftLogoImg {
   width: 90px;
-  padding: 28px;
+  /* padding: 28px; */
+  padding-left : 28px;
 }
 
 .myInfoWrapper {
