--- a/styles.css
+++ b/styles.css
@@ -306,8 +306,8 @@ main {
   width: 100%;
   margin: 0;
   gap: 10px;
-    overflow-y: scroll;
-  scroll-behavior: smooth;
+    /* overflow-y: scroll; */
+  /* scroll-behavior: smooth; */
 }
 
 .listButton {
