--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,12 @@ body {
   padding:0;
   min-height: 100vh;
 
-
   display: flex;
   flex-direction: column;
   min-height: 100vh;  
   overflow-y: hidden;
+  background-image: url("Images/writinglist.jpg");
+  background-size: cover;
 }
 
 p {
@@ -130,8 +131,10 @@ main {
   justify-content: center;
   align-self: flex-start;
   gap:24px;
-  background-color: var(--primaryBackgroudColor);
-
+  padding-left : 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  background-color: rgba(50, 50, 50, 0.5);
   
 }
 
@@ -296,6 +299,7 @@ main {
   border: 6px solid var(--primaryTextColor);
   border-radius: 5px;
   margin:0px;
+
 
 
 }
