--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   --lightModeBackgroundColor: rgb(221,221,221);
   --primaryTextColor: #40a0dB;
   --highPriorityColor:#e68f93;
+  --mediumPriorityColor : darkgreen;
   --mediumPriorityColor:#b3e59f;
   --lowPriorityColor:#78affa;
   --buttonColor:#d9d9d9; 
@@ -135,6 +136,7 @@ main {
   padding-right: 20px;
   padding-bottom: 20px;
   background-color: rgba(50, 50, 50, 0.5);
+  border-radius: 5px;
   
 }
 
@@ -297,6 +299,7 @@ main {
   height: 650px;
   background-color: rgb(50, 50, 50);
   border: 6px solid var(--primaryTextColor);
+    background-color: rgba(50, 50, 50, 0.5);
   border-radius: 5px;
   margin:0px;
 
