--- a/css/errorMsgDiv.css
+++ b/css/errorMsgDiv.css
@@ -19,7 +19,7 @@
   .showErrorMsg {
 
     animation-name: rotateIn;
-    animation-duration: 1s;
+    animation-duration: 3s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
   }
@@ -33,8 +33,13 @@
 
 @keyframes rotateIn {
 
-    0% { translate:rotateX(180deg);}
-    100% { translate:rotateX(0deg);}
+    0% { transform:translateY(-120px);
+         opacity: 0.5;
+        }
+    100% { 
+            transform:translateY(0);
+            opacity: 1;
+        }
 
 }
 
