--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
   --lowPriorityColor:#78affa;
   --buttonColor:#d9d9d9; 
   --primaryFontFamily: "Irish Grover";
+  --primaryBoxShadow : 5px 8px 21px 2px #000000;
 
  
 }
@@ -140,6 +141,7 @@ li {
 main {
  flex-grow: 1;
   margin: 40px;
+  /* perspective: 10px; */
 
 }
 
@@ -161,6 +163,7 @@ main {
   padding: 25px;
   width:fit-content;
   align-self: center;
+  box-shadow: 5px 8px 21px 2px #000000;
 }
 
 .creditButton {
