--- a/css/errorMsgDiv.css
+++ b/css/errorMsgDiv.css
@@ -2,6 +2,7 @@
 
 .errorMsgDiv {
     flex-direction: column;
+    align-items: center;
     width: 512 px;
     height:187px;
     background-color: rgba(145, 50, 50, 0.5);
