--- a/css/errorMsgDiv.css
+++ b/css/errorMsgDiv.css
@@ -3,7 +3,7 @@
 .errorMsgDiv {
     flex-direction: column;
     align-items: center;
-    width: 512 px;
+    width: 512px;
     height:187px;
     background-color: rgba(145, 50, 50, 0.5);
     border: var(--primaryBorder);
@@ -12,11 +12,12 @@
     }
   
   .errorHeadingText {
-    background-color: #78affa;
+    background-color:  rgba(145, 50, 50, 0.5);
     color:black;
     padding-left: 10px;
     margin: 0;
     border: 1px solid black;
+    width: 100%;
   }
   
   .showErrorMsg {
