--- a/css/regTaskToDoForm.css
+++ b/css/regTaskToDoForm.css
@@ -9,7 +9,7 @@
     padding-right: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
-    background-color:var(--primaryBackgroudColor);
+    background-color:var(--primaryBackgroundColor);
     border-radius: 5px;
     border: var(--primaryBorder);
     box-shadow: 5px 8px 21px 2px #000000;
